Template changes to work with new JS progressive enhancement

--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -116,14 +116,31 @@
                         {% trans %}<abbr title="lasting power of attorney">LPA</abbr> details{% endtrans %}
                     </h2>
 
+                    {% if feature_enabled("instructions_and_preferences") %}
+                        {% include '@partials/lpa-summary-details/iap-images-components.html.twig' %}
+
+                        <iap-images
+                        {%- if (iap_images is defined
+                                and ((iap_images.status is constant('\\Common\\Entity\\InstructionsAndPreferences\\ImagesStatus::COLLECTION_IN_PROGRESS'))
+                                or (iap_images.status is constant('\\Common\\Entity\\InstructionsAndPreferences\\ImagesStatus::COLLECTION_NOT_STARTED')))) %}
+                            data-wait="{{ actorToken }}"
+                        {%- endif -%}
+                        >
+                    {% endif %}
+
                     {% include '@partials/lpa-summary-details/lpa-details.html.twig' %}
 
                     {% if feature_enabled("instructions_and_preferences") and iap_images is defined %}
                         {% if iap_images.status is not constant('\\Common\\Entity\\InstructionsAndPreferences\\ImagesStatus::COLLECTION_ERROR') %}
-                            <div class="govuk-inset-text">
-                                {% trans %}If any scanned images are not readable, organisations may ask to see the paper LPA so that they can find out what the instructions or preferences are.{% endtrans %}
+                            <div id="images-guidance" class="govuk-inset-text">
+                                {% trans %}If any scanned images are not readable, organisations may ask to see the paper LPA so that
+                                they can find out what the instructions or preferences are.{% endtrans %}
                             </div>
                         {% endif %}
+                    {% endif %}
+
+                    {% if feature_enabled("instructions_and_preferences") %}
+                        </iap-images>
                     {% endif %}
 
                     <p class="govuk-body">
