--- a/service-front/app/src/Common/templates/partials/flash-message.html.twig
+++ b/service-front/app/src/Common/templates/partials/flash-message.html.twig
@@ -2,7 +2,7 @@
     <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
         <div class="govuk-notification-banner__header">
             <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                Success
+                {% trans %}Success{% endtrans %}
             </h2>
         </div>
         <div class="govuk-notification-banner__content">
