--- a/service-admin/web/templates/stats.page.gohtml
+++ b/service-admin/web/templates/stats.page.gohtml
@@ -11,7 +11,7 @@
 
   {{ if .Result }}
     <table class="govuk-table">
-      <thead class="govuk-table__head">
+      <thead class="govuk-table__header">
       <tr class="govuk-table__row">
         <th scope="col" class="govuk-table__header">Category: Account</th>
         <th scope="col" class="govuk-table__header">Total</th>
