amended table category name.

--- a/service-admin/web/templates/stats.page.gohtml
+++ b/service-admin/web/templates/stats.page.gohtml
@@ -64,7 +64,7 @@
         <table class="govuk-table">
             <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header">Category: Account</th>
+                <th scope="col" class="govuk-table__header">Category: Activation keys</th>
                 <th scope="col" class="govuk-table__header">Total</th>
                 <th scope="col" class="govuk-table__header">Current month - Current year</th>
                 <th scope="col" class="govuk-table__header">Previous month - Current year</th>
@@ -109,7 +109,7 @@
         <table class="govuk-table">
             <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header">Category: Account</th>
+                <th scope="col" class="govuk-table__header">Category: Access codes</th>
                 <th scope="col" class="govuk-table__header">Total</th>
                 <th scope="col" class="govuk-table__header">Current month - Current year</th>
                 <th scope="col" class="govuk-table__header">Previous month - Current year</th>
@@ -148,7 +148,7 @@
         <table class="govuk-table">
             <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header">Category: Account</th>
+                <th scope="col" class="govuk-table__header"> </th>
                 <th scope="col" class="govuk-table__header">Total</th>
                 <th scope="col" class="govuk-table__header">Current month - Current year</th>
                 <th scope="col" class="govuk-table__header">Previous month - Current year</th>
