amended nav bar html

--- a/service-admin/web/templates/header.partial.gohtml
+++ b/service-admin/web/templates/header.partial.gohtml
@@ -20,23 +20,30 @@
       </div>
     </div>
   </header>
-  <div class="moj-header__container">
-    <div class="govuk-tabs" data-module="govuk-tabs">
-      <h2 class="govuk-tabs__title">
-        Contents
-      </h2>
-      <ul class="govuk-tabs__list">
-        <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-          <a class="govuk-tabs__tab" href="/">
-            Find a key or email address
-          </a>
-        </li>
-        <li class="govuk-tabs__list-item">
-          <a class="govuk-tabs__tab" href="/stats">
-            Measuring impact
-          </a>
-        </li>
-      </ul>
+
+  <div class="moj-primary-navigation">
+
+    <div class="moj-primary-navigation__container">
+
+      <div class="moj-primary-navigation__nav">
+
+        <nav class="moj-primary-navigation" aria-label="Primary navigation">
+
+          <ul class="moj-primary-navigation__list">
+            <li class="moj-primary-navigation__item">
+              <a class="moj-primary-navigation__link" aria-current="page" href="/">Find a key or email address</a>
+            </li>
+
+            <li class="moj-primary-navigation__item">
+              <a class="moj-primary-navigation__link" href="/stats">Measuring impact</a>
+            </li>
+          </ul>
+
+        </nav>
+
+      </div>
     </div>
-  </div>  
+
+  </div>
+
 {{ end }}
