UML-1066 - Move out common header and footer (#2304)
* macro

* attempt to import macros and call macro in another template

* use partial instead of macro

* remove welsh-switch.html.twig

* remove duplicate feedback footers

* hide headers and footers when downloading pdf

* amend feature file

* Ensure 404 page works

* Add test coverage to TranslationSwitchExtensionTest

* refactor getRouteName() and add return types to test file

---------

Co-authored-by: Nick Davis <nicholas.davis@digital.justice.gov.uk>
Co-authored-by: Mishkat Najam <mishkat.najam@digital.justice.gov.uk>
Co-authored-by: MishNajam <61416092+MishNajam@users.noreply.github.com>

--- a/service-front/app/src/Common/templates/layout/default.html.twig
+++ b/service-front/app/src/Common/templates/layout/default.html.twig
@@ -111,7 +111,9 @@
     </div>
 </header>
 
+{{ include("@partials/headers-common.html.twig") }}
 {% block content %}{% endblock %}
+{{ include("@partials/footers-common.html.twig") }}
 
 <footer class="govuk-footer " role="contentinfo">
     <div class="govuk-width-container ">
