--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-attorney-details.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-attorney-details.html.twig
@@ -36,12 +36,12 @@
 {% endfor %}
 
 {% for tc in lpa.trustCorporations %}
-    {% set i = loop.index + lpa.attorneys | length %}
-    <h3 class="govuk-heading-m">{% trans count loop.index with {'%attorneyOrdinal%': i | ordinal } %}%attorneyOrdinal% attorney|%attorneyOrdinal% attorney{% endtrans %}</h3>
+    {% set i = loop.index + lpa.activeAttorneys | length %}
+    <h3 class="govuk-heading-m">{% trans count i with {'%attorneyOrdinal%': i | ordinal } %}%attorneyOrdinal% attorney|%attorneyOrdinal% attorney{% endtrans %}</h3>
     <dl class="govuk-summary-list govuk-summary-list--no-border">
         <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">{% trans %}Name{% endtrans %}</dt>
-            <dd class="govuk-summary-list__value">{{ tc.companyName }} {{ "(Trust corporation)" }}</dd>
+            <dd class="govuk-summary-list__value">{{ tc.companyName }} {% trans %}(Trust corporation){% endtrans %}</dd>
         </div>
         <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">{% trans %}Address{% endtrans %}</dt>
