--- a/service-admin/web/templates/header.partial.gohtml
+++ b/service-admin/web/templates/header.partial.gohtml
@@ -31,7 +31,7 @@
 
           <ul class="moj-primary-navigation__list">
             <li class="moj-primary-navigation__item">
-              {{ if .Result }}
+              {{ if .IsStatsPage }}
                 <a class="moj-primary-navigation__link" href="/">Find a key or email address</a>
               {{ else }}
                 <a class="moj-primary-navigation__link" aria-current="page" href="/">Find a key or email address</a>
@@ -39,7 +39,7 @@
             </li>
 
             <li class="moj-primary-navigation__item">
-              {{ if .Result }}
+              {{ if .IsStatsPage }}
                 <a class="moj-primary-navigation__link" aria-current="page" href="/stats">Measuring impact</a>
               {{ else }}
                 <a class="moj-primary-navigation__link" href="/stats">Measuring impact</a>
