added dynamic content for loader

--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/iap-images-components.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/iap-images-components.html.twig
@@ -13,7 +13,7 @@
 </template>
 
 <template id="iap-preferences-wait">
-    {{ iap.preferences_wait() }}
+    {{ iap.preferences_dynamic_wait() }}
 </template>
 
 <template id="iap-instructions-error">
@@ -21,7 +21,7 @@
 </template>
 
 <template id="iap-instructions-wait">
-    {{ iap.instructions_wait() }}
+    {{ iap.instructions_dynamic_wait() }}
 </template>
 
 <template id="iap-unknown-section">
