--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/iap-macros.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/iap-macros.html.twig
@@ -58,7 +58,15 @@
     {% endif %}
 {% endmacro %}
 
-{% macro preferences_wait() %}
+{% macro preferences_dynamic_wait() %}
+    {{ _self.images_wait(
+        'A scanned image of the donor’s preferences will appear here soon
+        The first time may take up to 10 minutes.
+        You do not need to stay on the page or refresh it whilst you wait.' | trans
+    ) }}
+{% endmacro %}
+
+{% macro preferences_static_wait() %}
     {{ _self.images_wait(
         'A scanned image of the donor’s preferences will appear here soon. The first time may
         take up to 10 minutes. Please refresh this page.' | trans
@@ -83,9 +91,17 @@
     {% endif %}
 {% endmacro %}
 
-{% macro instructions_wait() %}
+{% macro instructions_static_wait() %}
     {{ _self.images_wait(
         'A scanned image of the donor’s instructions will appear here soon. The first time may
         take up to 10 minutes. Please refresh this page.' | trans
+    ) }}
+{% endmacro %}
+
+{% macro instructions_dynamic_wait() %}
+    {{ _self.images_wait(
+        'A scanned image of the donor’s instructions will appear here soon
+        The first time may take up to 10 minutes.
+        You do not need to stay on the page or refresh it whilst you wait' | trans
     ) }}
 {% endmacro %}
