--- a/service-front/app/src/Actor/templates/actor/check-your-answers.html.twig
+++ b/service-front/app/src/Actor/templates/actor/check-your-answers.html.twig
@@ -71,7 +71,7 @@
                                     {% trans %}Do you live in the UK?{% endtrans %}
                                 </dt>
                                 <dd class="govuk-summary-list__value">
-                                    {{ data.live_in_uk }}
+                                    {% trans %}No{% endtrans %}
                                 </dd>
                                 <dd class="govuk-summary-list__actions">
                                     <a class="govuk-link" id="change-postcode" href="{{ path('lpa.postcode') }}">
