--- a/service-admin/web/templates/header.partial.gohtml
+++ b/service-admin/web/templates/header.partial.gohtml
@@ -31,19 +31,11 @@
 
           <ul class="moj-primary-navigation__list">
             <li class="moj-primary-navigation__item">
-              {{ if .IsStatsPage }}
-                <a class="moj-primary-navigation__link" href="/">Find a key or email address</a>
-              {{ else }}
-                <a class="moj-primary-navigation__link" aria-current="page" href="/">Find a key or email address</a>
-              {{ end }}
+                <a class="moj-primary-navigation__link" {{ if eq .Path "/" }}aria-current="page"{{ end }} href="/">Find a key or email address</a>
             </li>
 
             <li class="moj-primary-navigation__item">
-              {{ if .IsStatsPage }}
-                <a class="moj-primary-navigation__link" aria-current="page" href="/stats">Measuring impact</a>
-              {{ else }}
-                <a class="moj-primary-navigation__link" href="/stats">Measuring impact</a>
-              {{ end }}
+                <a class="moj-primary-navigation__link" {{ if eq .Path "/stats" }}aria-current="page"{{ end }} href="/stats">Measuring impact</a>
             </li>
           </ul>
 
