--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/iap-macros.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/iap-macros.html.twig
@@ -60,7 +60,7 @@
 
 {% macro preferences_dynamic_wait() %}
     {{ _self.images_wait(
-        'A scanned image of the donor’s preferences will appear here soon
+        'A scanned image of the donor’s preferences will appear here soon.
         The first time may take up to 10 minutes.
         You do not need to stay on the page or refresh it whilst you wait.' | trans
     ) }}
@@ -100,7 +100,7 @@
 
 {% macro instructions_dynamic_wait() %}
     {{ _self.images_wait(
-        'A scanned image of the donor’s instructions will appear here soon
+        'A scanned image of the donor’s instructions will appear here soon.
         The first time may take up to 10 minutes.
         You do not need to stay on the page or refresh it whilst you wait' | trans
     ) }}
