Tweaks to the runtime operation of the components

--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/iap-macros.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/iap-macros.html.twig
@@ -102,6 +102,6 @@
     {{ _self.images_wait(
         'A scanned image of the donor’s instructions will appear here soon.
         The first time may take up to 10 minutes.
-        You do not need to stay on the page or refresh it whilst you wait' | trans
+        You do not need to stay on the page or refresh it whilst you wait.' | trans
     ) }}
 {% endmacro %}
