UML-2987 Pushing up spike changes to check pipeline failures

--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
@@ -101,6 +101,8 @@
                         {% if lpa.applicationHasGuidance %}
                             {% if feature_enabled("instructions_and_preferences") and iap_images is defined %}
                                 {% trans %}Yes, the donor made preferences on their LPA.{% endtrans %}
+                            {% elseif feature_enabled("instructions_and_preferences") %}
+                                {% trans %}Sorry{% endtrans %}
                             {% else %}
                                 {% trans %}Yes, the donor made preferences on their LPA.{% endtrans %}
                                 <br>{% trans %}To view these, ask to see the paper LPA.{% endtrans %}
