UML-2725 implement check for pwned passwords

--- a/service-front/app/src/Actor/templates/actor/form-error-messages.html.twig
+++ b/service-front/app/src/Actor/templates/actor/form-error-messages.html.twig
@@ -15,6 +15,8 @@
 {% trans %}Passwords do not match{% context %}error{% notes %}Create account{% endtrans %}
 {% trans %}Confirm your password{% context %}error{% notes %}Create account, password reset{% endtrans %}
 {% trans %}You must accept the terms of use to create an account{% context %}error{% notes %}Create account{% endtrans %}
+{% trans %}Password is too common{% context %}error{% notes %}Create account, change password{% endtrans %}
+
 
 {# Triage page #}
 {% trans %}Select yes if you have a Use a lasting power of attorney account{% context %}error{% notes %}Triage page{% endtrans %}
