Add a way of easily setting system messages when we need them  (#2307)
* Add service error I&P error message

* Updated error message text.

* Further updates to error message

* Show viewer error message instead of actor side on viewer code page

* Setup an easier way to do system messages

--- a/service-front/app/src/Viewer/templates/viewer/enter-code.html.twig
+++ b/service-front/app/src/Viewer/templates/viewer/enter-code.html.twig
@@ -5,6 +5,9 @@
 {% block content %}
 <div class="govuk-width-container">
     <main class="govuk-main-wrapper" id="main-content" role="main">
+
+        {{ include('@viewer/partials/service-message.html.twig') }}
+
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
 
