--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -167,7 +167,7 @@
                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                 <strong class="govuk-warning-text__text">
                     <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
-                    {% trans %}You cannot 33use a download or printout of this <abbr title="lasting power of attorney">LPA</abbr> summary. Always use the original paper <abbr title="lasting power of attorney">LPA</abbr> or give someone an access code.{% endtrans %}
+                    {% trans %}You cannot use a download or printout of this <abbr title="lasting power of attorney">LPA</abbr> summary. Always use the original paper <abbr title="lasting power of attorney">LPA</abbr> or give someone an access code.{% endtrans %}
                 </strong>
             </div>
             </p>
