--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -167,7 +167,7 @@
                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                 <strong class="govuk-warning-text__text">
                     <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
-                    {% trans %}You cannot use a download or print out of this <abbr title="lasting power of attorney">LPA</abbr> summary in place of the original paper
+                    {% trans %}You cannot 33use a download or print out of this <abbr title="lasting power of attorney">LPA</abbr> summary in place of the original paper
                         <abbr title="lasting power of attorney">LPA</abbr> or instead of giving someone an access code.{% endtrans %}
                 </strong>
             </div>
