changed link url

--- a/service-front/app/src/Common/templates/layout/default.html.twig
+++ b/service-front/app/src/Common/templates/layout/default.html.twig
@@ -147,7 +147,7 @@
                         </a>
                     </li>
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="https://jobs.jobvite.com/justicedigitalandtechnology/jobs">
+                        <a class="govuk-footer__link" href="https://www.gov.uk/government/organisations/office-of-the-public-guardian">
                             {% trans %}Built by OPG Digital{% endtrans %}
                         </a>
                     </li>
