content change bullet points amended

--- a/service-front/app/src/Actor/templates/actor/request-activation-key/before-requesting-activation-key-info.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/before-requesting-activation-key-info.html.twig
@@ -34,7 +34,8 @@
                     <p class="govuk-body">{% trans %}To ask for a key, you'll need to give us:{% endtrans %}</p>
 
                     <ul class="govuk-list govuk-list--bullet">
-                        <li>{% trans %}your name, date of birth and address{% endtrans %}</li>
+                        <li>{% trans %}your name and date of birth{% endtrans %}</li>
+                        <li>{% trans %}your current address - all activation keys are sent by post{% endtrans %}</li>
                         <li>{% trans %}the LPA reference number - you'll find this on the paper LPA and on letters from the Office of the Public Guardian (OPG){% endtrans %}</li>
                     </ul>
 
