content changes postcode

--- a/service-front/app/src/Actor/templates/actor/request-activation-key/postcode.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/postcode.html.twig
@@ -17,7 +17,7 @@
                 <div class="govuk-grid-column-two-thirds">
 
                     <h1 class="govuk-heading-xl" id="postcode_heading">{% trans %}Where do you live?{% endtrans %}</h1>
-                    <p class="govuk-body">{% trans %}We'll send your activation key to you by post.{% endtrans %}</p>
+                    <p class="govuk-body">{% trans %}We will send your activation key to you by post.{% endtrans %}</p>
 
                     {{ govuk_form_open(form) }}
 
