--- a/service-front/app/src/Actor/templates/actor/request-activation-key/postcode.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/postcode.html.twig
@@ -1,6 +1,6 @@
 {% extends '@actor/layout.html.twig' %}
 
-{% block html_title %}{% trans %}What is your UK postcode?{% endtrans %} - {{ parent() }}{% endblock %}
+{% block html_title %}{% trans %}What is your current postcode?{% endtrans %} - {{ parent() }}{% endblock %}
 
 {% block content %}
     <div class="govuk-width-container">
@@ -16,9 +16,8 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
 
-                    <h1 class="govuk-heading-xl" id="postcode_heading">{% trans %}Do you live in the UK?{% endtrans %}</h1>
-
-{#                  <p class="govuk-body">{% trans %}This must be your current postcode. Your activation key will be posted to this address.{% endtrans %}</p>#}
+                    <h1 class="govuk-heading-xl" id="postcode_heading">{% trans %}Where do you live?{% endtrans %}</h1>
+                    <p class="govuk-body">{% trans %}We will send your activation key to you by post.{% endtrans %}</p>
 
                     {{ govuk_form_open(form) }}
 
@@ -27,12 +26,12 @@
                     {{ govuk_form_element(form.get('live_in_uk'), {'value_options':
                         [
                             {
-                                'label': 'Yes'| trans,
+                                'label': 'I live in the UK'| trans,
                                 'value': 'Yes',
                                 'conditionalContent': {"postcode": govuk_form_element(form.get('postcode'),{'label': 'What is your UK postcode?'| trans})}
                             },
                             {
-                                'label': 'No'| trans,
+                                'label': 'I do not live in the UK'| trans,
                                 'value': 'No'
                             },
                         ]}
