--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-attorney-details.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-attorney-details.html.twig
@@ -24,6 +24,12 @@
             <dt class="govuk-summary-list__key">{% trans %}Name{% endtrans %}</dt>
             <dd class="govuk-summary-list__value">{{ actor_name(attorney) }}</dd>
         </div>
+        {% if attorney.otherNames %}
+        <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">{% trans %}Also known as{% endtrans %}</dt>
+            <dd class="govuk-summary-list__value">{{ attorney.otherNames }}</dd>
+        </div>
+        {% endif %}
         <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">{% trans %}Date of birth{% endtrans %}</dt>
             <dd class="govuk-summary-list__value">{{ lpa_date(attorney.dob) }}</dd>
