--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-donor-details.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-donor-details.html.twig
@@ -4,6 +4,12 @@
         <dt class="govuk-summary-list__key">{% trans %}Name{% endtrans %}</dt>
         <dd class="govuk-summary-list__value">{{ actor_name(lpa.donor) }}</dd>
     </div>
+    {% if lpa.donor.otherNames %}
+    <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">{% trans %}Also known as{% endtrans %}</dt>
+        <dd class="govuk-summary-list__value">{{ lpa.donor.otherNames }}</dd>
+    </div>
+    {% endif %}
     <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">{% trans %}Date of birth{% endtrans %}</dt>
         <dd class="govuk-summary-list__value">{{ lpa_date(lpa.donor.dob) }}</dd>
